--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -26,6 +27,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Roboto+Slab:wght@900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}">
+
+
     <title>Recipes</title>
+
+
 
 </head>
