--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -30,7 +30,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
+    {% comment %} <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}">
 
 
