--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,23 +1,14 @@
-{% include 'recipes/partials/head.html' %}
+{% extends 'global/base.html' %} 
 
+ {% block title %}Home |{% endblock title %}
 
-<body>
-    {% include 'recipes/partials/header.html' %}
-    {% include 'recipes/partials/search.html' %}
+{% block content %}
+<div class="main-content container main-content-list">
+   <!-- <div class="temp"></div> -->
+    {% for recipe in recipes %}
+        {% include 'recipes/partials/recipe.html' %}            
+    {% endfor %}
 
-    <main class="main-content-containder">
-        <div class="main-content container main-content-list">
-            <!-- <div class="temp"></div> -->
-            {% include 'recipes/partials/recipe.html' %}
-            {% include 'recipes/partials/recipe.html' %}
-            {% include 'recipes/partials/recipe.html' %}
-            {% include 'recipes/partials/recipe.html' %}
-
-
-        </div>
-    </main>
-    {% include 'recipes/partials/footer.html' %}
-
-</body>
-
-</html>
+</div>
+{% endblock content %}
+  
