--- a/recipes/templates/recipes/pages/recipe-view.html
+++ b/recipes/templates/recipes/pages/recipe-view.html
@@ -1,21 +1,15 @@
-{% include 'recipes/partials/head.html' %}
+{% extends 'global/base.html' %} 
 
+{% block title %}Alterar |{% endblock title %}
 
-<body>
-    {% include 'recipes/partials/header.html' %}
-    {% include 'recipes/partials/search.html' %}
+{% block content %}
 
     <main class="main-content-containder">
         <div class="main-content main-content-detail container ">
             <!-- <div class="temp"></div> -->
             {% include 'recipes/partials/recipe.html' %}
            
-
-
         </div>
     </main>
-    {% include 'recipes/partials/footer.html' %}
 
-</body>
-
-</html>
+{% endblock content %}
