--- a/recipes/templates/recipes/pages/contato.html
+++ b/recipes/templates/recipes/pages/contato.html
@@ -1,16 +1,12 @@
 {% extends 'global/base.html' %} 
 
- {% block title %}Home |{% endblock title %}
+ {% block title %}Contato |{% endblock title %}
 
 {% block content %}
 <div class="main-content container main-content-list">
    <!-- <div class="temp"></div> -->
 
-{% for recipe in recipes  %}
-{% include 'recipes/partials/recipe.html' %}
-{% empty %}
-    <h1> No recipes found in the page.</h1>
-{% endfor %}   
+<h1>Fone para Contato</h1> 
                       
 
 
