--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -22,13 +22,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&family=Roboto+Slab:wght@900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
+    {% comment %} <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}"> {% endcomment %}
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
 
     {% comment %} bootstrap CDN {% endcomment %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    {% comment %} <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}"> {% endcomment %}
-    <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}">
+    <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
+    {% comment %} <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}"> {% endcomment %}
 
