--- a/static1/recipes/css/styles.css
+++ b/static1/recipes/css/styles.css
@@ -1,4 +1,6 @@
+/* esse arquivo foi alterado de local
 
+para recipes/static/style.css*/
 :root {
     --color-primary: #269fe6;
     --color-primary-hover: #2086c2;
@@ -272,4 +274,4 @@ body {
 
 .main-footer a:hover {
     filter: brightness(.8);
-}
+} 
