--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -3,6 +3,9 @@
  {% block title %}Home |{% endblock title %}
 
 {% block content %}
+
+{% include 'recipes/partials/messages.html' %}
+
 <div class="main-content container main-content-list">
    <!-- <div class="temp"></div> -->
 
